--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap" rel="stylesheet">
     <title>Book Browser</title>
+    <meta name="description" content="Book Browser - Search for interesting books.">
   </head>
   <body>
     <noscript>
